--- a/style.css
+++ b/style.css
@@ -2,11 +2,24 @@
     padding: 0;
     margin: 0;
 }
-
 #menu-bar {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
     padding: 40px 80px;
-    border: 2px solid black;
+}
+.unactive-menu-items {
+    border: none;
+    background-color: white;
+    font-size: large;
+    font-weight: 600;
+}
+.active-menu-item {
+    border: none;
+    background-color: white;
+    font-size: large;
+    font-weight: 600;
+    border-bottom: 2px solid black;
+}
+.hidden-content{
+    display: none;
 }
